--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,8 @@
 ---
-theme :
-  name : twitter
 layout: default
 ---
-{% include JB/setup %}
-{% include themes/twitter/page.html %}
+<h1>{{ page.title}}</h1>
+<p class="subtitle">{{ page.date | date: "%B %-d, %Y" }}</p>
+
+
+{{ content }}
