--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,9 +1,14 @@
-
----
-layout: default
----
-<h1>{{ page.title}}</h1>
-<p class="subtitle">{{ page.date | date: "%B %-d, %Y" }}</p>
-
-
-{{ content }}
+<!DOCTYPE html>
+<html>
+  {% include head.html %}
+  <body>
+    {% include header.html %}
+    <article class="group">
+	    <h1>{{ page.title}}</h1>
+		<p class="subtitle">{{ page.date | date: "%B %-d, %Y" }}</p>	
+	      {{ content }}
+    </article>
+    {% include print-footer.html %}
+    {% include footer.html %}
+  </body>
+</html>
