--- a/css/tufte.css
+++ b/css/tufte.css
@@ -179,6 +179,18 @@ p, ol, ul { font-size: 1.4rem; }
 
 p, li { line-height: 2rem; margin-top: 1.4rem; padding-right: 2rem; vertical-align: baseline; }
 
+/* Chapter Epigraphs */
+div.epigraph { margin: 3.5636rem 0; }
+
+div.epigraph > blockquote { margin-top: 3rem; margin-bottom: 3rem; }
+
+div.epigraph > blockquote, div.epigraph > blockquote > p { font-style: italic; }
+
+div.epigraph > blockquote > footer { font-style: normal; width: 45%; padding-left: 2.5%; padding-right: 2.5%; padding-top: 0; margin-top: 0.4455rem; margin-bottom: 3.1182rem; }
+
+div.epigraph > blockquote > footer > cite { font-style: italic; }
+
+/* end chapter epigraphs styles */
 blockquote p { font-size: 1.1rem; line-height: 1.78181818; margin-top: 1.78181818rem; margin-bottom: 1.78181818rem; width: 45%; padding-left: 2.5%; padding-right: 2.5%; }
 
 blockquote footer { width: 45%; text-align: right; }
