--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
     </article>
     {% include print-footer.html %}
     {% include footer.html %}
+    {% if page.comments %}
+      {% include disqus.html %}
+    {% endif %}
     {% include analytics.html %}
   </body>
 </html>
