--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,9 @@
         <a href="{{ entry.link }}"><span class="{{ entry.icon }}"></span></a>
       </li>
     {% endfor %}  
+    <li>
+      <a rel="me" href="https://twit.social/@ahl">Mastodon</a>
+    </li>
   </ul>
 <div class="credits">
 <span>&copy; {{ site.time | date: '%Y' }} &nbsp;&nbsp;{{site.author.name | upcase }}</span></br> <br>
